2009-03-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/6504776> 
        CrashTracer: [USER] 188 crashes in Safari at com.apple.WebCore • WTF::HashTableIterator<WTF::RefPtr<WebCore::ResourceLoader>, ...
        
        If the m_pluginView member was zeroed out as a result of making a call into the plug-in, the pluginFunctionCallDepth would be off
        causing the plug-in never to be stopped. Simplify the code by using a RAII object.

        * Plugins/WebBaseNetscapePluginStream.mm:
        (PluginStopDeferrer::PluginStopDeferrer):
        (PluginStopDeferrer::~PluginStopDeferrer):
        (WebNetscapePluginStream::startStream):
        (WebNetscapePluginStream::wantsAllStreams):
        (WebNetscapePluginStream::destroyStream):

2009-03-17  Darin Adler  <darin@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/6687005> Need support for new move-left/right selectors.

        * WebView/WebHTMLView.mm: Added the four new selectors to the command-forwarding list.
        * WebView/WebView.mm: Ditto.

2009-03-17  Darin Adler  <darin@apple.com>

        Reviewed by Adele Peterson.

        Bug 24477: REGRESSION (r41467): Page Down key scrolls two pages
        https://bugs.webkit.org/show_bug.cgi?id=24477
        rdar://problem/6674184

        * WebView/WebHTMLView.mm:
        (responderChainRespondsToSelector): Added.
        (-[WebHTMLView doCommandBySelector:]): Set eventWasHandled based on whether we
        can find a responder that responds to this selector rather than always assuming
        the selector will not be handled.

2009-03-17  Mark Rowe  <mrowe@apple.com>

        Fix the build.

        * Plugins/Hosted/HostedNetscapePluginStream.mm:

2009-03-17  David Kilzer  <ddkilzer@apple.com>

        Use -[NSURLResponse(WebCoreURLResponse) _webcore_MIMEType] consistently

        Reviewed by Darin Adler.

        WebKit r30323 added -_webcore_MIMEType to fix issues with